--- a/client/components/footer/stylesheet.css
+++ b/client/components/footer/stylesheet.css
@@ -1,17 +1,18 @@
-.footer{
-  text-align: center;
-  padding: 56px 0;
-  background-size: cover;
-}
+/* SPIKE */
+  .footer{
+    text-align: center;
+    padding: 56px 0;
+    background-size: cover;
+  }
 
-.footer p{
-  margin: 0 0 8px 0;
-  font-size: 14px;
-  color: #FFF;
-}
+  .footer p{
+    margin: 0 0 8px 0;
+    font-size: 14px;
+    color: #FFF;
+  }
 
-.footer a{
-  color: #FFF;
-  text-decoration: none;
-  font-weight: 700;
-}
+  .footer a{
+    color: #FFF;
+    text-decoration: none;
+    font-weight: 700;
+  }
